faire le card pizza

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.5.2",
     "node-fetch": "^3.3.2",
     "pnpm": "^9.3.0",
     "react": "^18.2.0",
