added test data + redirect to profile

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "@interfaces/*": ["src/interfaces/*"],
       "@commons/*": ["src/commons/*"],
       "@assets/*": ["src/assets/*"],
+      "@layouts/*": ["src/layouts/*"],
     }
   },
   "include": ["src"],
